<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBasePage"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screenLargeInnerMargin"
        android:layout_marginTop="@dimen/screenLargeMargin"
        android:layout_marginEnd="@dimen/screenLargeInnerMargin"
        android:background="@null"
        android:gravity="start|center"
        android:text="@string/time_to_take"
        android:textSize="@dimen/titleBigTextSize"
        android:id="@+id/etDrugName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/screenNormalMargin">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/vLine"
            android:layout_marginTop="@dimen/screenLargeMargin"
            android:background="?attr/colorBasePageAccent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/vLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_flat_background"
                android:backgroundTint="?attr/colorBasePage"
                android:text="@string/every_day"
                android:gravity="start|center"
                android:paddingStart="@dimen/screenLargeInnerMargin"
                android:id="@+id/btnEveryDay"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_flat_background"
                android:backgroundTint="?attr/colorBasePage"
                android:text="@string/every_other_day"
                android:gravity="start|center"
                android:paddingStart="@dimen/screenLargeInnerMargin"
                android:id="@+id/btnEveryOtherDay"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_flat_background"
                android:backgroundTint="?attr/colorBasePage"
                android:text="@string/month_of_day"
                android:gravity="start|center"
                android:paddingStart="@dimen/screenLargeInnerMargin"
                android:id="@+id/btnMonthOfDay"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
